# microhal

./: .clang-format  .clangd  .gitignore  .indent.pro  .travis.yml  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Makefile  README.md  SConstruct  atmega2560.conf  atmega32.conf  atmega328.conf  avr-gcc.cmake  equations.py  hardware.mk  main.c  main.cpp  makefile  meson.build  setup.cfg
.circleci/: config.yml
.github/workflows/: ci.yml  examples.yml  unit_tests.yml
cmake/toolchain/: avr-gcc.cmake
docker/: Dockerfile  alpine.Dockerfile  apt-preferences  debian.Dockerfile  sources.list
examples/: CMakeLists.txt  CMakePresets.json  adc.cpp  eeprom_irq.cpp  flash.cpp  lcd.cpp  pin_irq.cpp  pwm.cpp  rtc.cpp  spi.cpp  thermistor.cpp  timer_pwm.cpp  usart.cpp  watchdog.cpp  ws2812.cpp
include/: adc.hpp  bits.hpp  buffer.hpp  byorder.hpp  byte_order.hpp  cobs.hpp  concepts.hpp  core.hpp  crc.hpp  datetime.hpp  defs.hpp  eeprom.hpp  encoders.hpp  flash.hpp  fmt.hpp  gpio.hpp  i2c.hpp  interface.hpp  iomem.hpp  irq.hpp  lpmx.hpp  pin_irq.hpp  printer.hpp  sfr.hpp  spi.hpp  string.hpp  thermistor.hpp  timer.hpp  timer_equations.hpp  traits.hpp  types.hpp  ubrr.hpp  units.hpp  usart.hpp  utils.hpp  vdiv.hpp  watchdog.hpp
include/drivers/: ds1337.hpp  hd44780.hpp  mcp49xx.hpp  mcp4xxx.hpp
include/mcu/: avr_gpio_common.hpp  avr_irq_common.hpp  avr_pin_irq_common.hpp  avr_usart_common.hpp  avr_watchdog_common.hpp
include/mcu/atmega2560/: adc.hpp  eeprom.hpp  gpio.hpp  i2c.hpp  irq.hpp  pin_irq.hpp  sfr.hpp  spi.hpp  timer.hpp  usart.hpp  watchdog.hpp
include/mcu/atmega32/: adc.hpp  eeprom.hpp  gpio.hpp  i2c.hpp  irq.hpp  pin_irq.hpp  sfr.hpp  spi.hpp  timer.hpp  usart.hpp  watchdog.hpp
include/mcu/atmega328/: adc.hpp  eeprom.hpp  gpio.hpp  i2c.hpp  irq.hpp  pin_irq.hpp  sfr.hpp  spi.hpp  timer.hpp  usart.hpp  watchdog.hpp
include/mcu/common/atmega/: gpio.hpp  irq.hpp  pin_irq.hpp  spi.hpp  timer.hpp  usart.hpp  watchdog.hpp
src/: adc.c  adc.cpp  adc.h  adc.hpp  atmega32.h  atmega328p.h  bcd.c  bcd.cpp  bcd.h  bcd.hpp  buffer.c  buffer.h  buffer.hpp  byorder.hpp  datetime.h  ds1337.c  ds1337.cpp  ds1337.h  ds1337.hpp  eeprom.cpp  eeprom.h  eeprom.hpp  encoders.hpp  flash.h  flash.hpp  gpio.cpp  gpio.h  gpio.hpp  hwconfig.h  i2c.c  i2c.cpp  i2c.h  i2c.hpp  interface.h  irq.h  irq.hpp  lpmx.hpp  main.c  main.cpp  mcp4922.h  (+42 more)
src/adc/: atmega32_adc.h
src/atmega2560/: mcu_adc.h  mcu_adc.hpp  mcu_gpio.h  mcu_gpio.hpp  mcu_irq.h  mcu_irq.hpp  mcu_pin_irq.h  mcu_pin_irq.hpp  mcu_sfr.h  mcu_spi.h  mcu_spi.hpp  mcu_timer.h  mcu_timer.hpp  mcu_usart.h  mcu_watchdog.h
src/atmega32/: mcu_adc.h  mcu_adc.hpp  mcu_eeprom.h  mcu_gpio.h  mcu_gpio.hpp  mcu_irq.h  mcu_irq.hpp  mcu_pin_irq.h  mcu_pin_irq.hpp  mcu_sfr.h  mcu_spi.h  mcu_spi.hpp  mcu_timer.h  mcu_timer.hpp  mcu_usart.h  mcu_usart.hpp  mcu_watchdog.h  mcu_watchdog.hpp
src/atmega328/: mcu_adc.h  mcu_adc.hpp  mcu_gpio.h  mcu_gpio.hpp  mcu_irq.h  mcu_irq.hpp  mcu_pin_irq.hpp  mcu_sfr.hpp  mcu_spi.h  mcu_spi.hpp  mcu_timer.h  mcu_timer.hpp  mcu_usart.h  mcu_usart.hpp  mcu_watchdog.h  mcu_watchdog.hpp
src/display/: hd44780.c  hd44780.cpp  hd44780.h  hd44780.hpp
src/drivers/: ds1337.cpp  hd44780.cpp  mcp49xx.cpp
src/eeprom/: at90can128_eeprom.h  at90can32_eeprom.h  at90can64_eeprom.h  at90pwm161_eeprom.h  at90pwm1_eeprom.h  at90pwm216_eeprom.h  at90pwm2b_eeprom.h  at90pwm316_eeprom.h  at90pwm3b_eeprom.h  at90pwm81_eeprom.h  at90usb1286_eeprom.h  at90usb1287_eeprom.h  at90usb162_eeprom.h  at90usb646_eeprom.h  at90usb647_eeprom.h  at90usb82_eeprom.h  atmega1280_eeprom.h  atmega1281_eeprom.h  atmega1284_eeprom.h  atmega1284p_eeprom.h  atmega1284rfr2_eeprom.h  atmega128_eeprom.h  atmega128a_eeprom.h  atmega128rfa1_eeprom.h  atmega128rfr2_eeprom.h  atmega162_eeprom.h  atmega164a_eeprom.h  atmega164p_eeprom.h  atmega164pa_eeprom.h  atmega165a_eeprom.h  atmega165p_eeprom.h  atmega165pa_eeprom.h  atmega168_eeprom.h  atmega168a_eeprom.h  atmega168p_eeprom.h  atmega168pa_eeprom.h  atmega168pb_eeprom.h  atmega169a_eeprom.h  atmega169p_eeprom.h  atmega169pa_eeprom.h  (+77 more)
src/gpio/: at90can128_gpio.h  at90can32_gpio.h  at90can64_gpio.h  at90pwm161_gpio.h  at90pwm1_gpio.h  at90pwm216_gpio.h  at90pwm2b_gpio.h  at90pwm316_gpio.h  at90pwm3b_gpio.h  at90pwm81_gpio.h  at90usb1286_gpio.h  at90usb1287_gpio.h  at90usb162_gpio.h  at90usb646_gpio.h  at90usb647_gpio.h  at90usb82_gpio.h  atmega1280_gpio.h  atmega1281_gpio.h  atmega1284_gpio.h  atmega1284p_gpio.h  atmega1284rfr2_gpio.h  atmega128_gpio.h  atmega128a_gpio.h  atmega128rfa1_gpio.h  atmega128rfr2_gpio.h  atmega162_gpio.h  atmega164a_gpio.h  atmega164p_gpio.h  atmega164pa_gpio.h  atmega165a_gpio.h  atmega165p_gpio.h  atmega165pa_gpio.h  atmega168_gpio.h  atmega168a_gpio.h  atmega168p_gpio.h  atmega168pa_gpio.h  atmega168pb_gpio.h  atmega169a_gpio.h  atmega169p_gpio.h  atmega169pa_gpio.h  (+78 more)
src/irq/: atmega32_irq.h
src/mcu/: atmega32.h  atmega328p.h
src/registers/: atmega32.h
src/sfr/: at90can128_sfr.h  at90can32_sfr.h  at90can64_sfr.h  at90pwm161_sfr.h  at90pwm1_sfr.h  at90pwm216_sfr.h  at90pwm2b_sfr.h  at90pwm316_sfr.h  at90pwm3b_sfr.h  at90pwm81_sfr.h  at90usb1286_sfr.h  at90usb1287_sfr.h  at90usb162_sfr.h  at90usb646_sfr.h  at90usb647_sfr.h  at90usb82_sfr.h  atmega1280_sfr.h  atmega1281_sfr.h  atmega1284_sfr.h  atmega1284p_sfr.h  atmega1284rfr2_sfr.h  atmega128_sfr.h  atmega128a_sfr.h  atmega128rfa1_sfr.h  atmega128rfr2_sfr.h  atmega162_sfr.h  atmega164a_sfr.h  atmega164p_sfr.h  atmega164pa_sfr.h  atmega165a_sfr.h  atmega165p_sfr.h  atmega165pa_sfr.h  atmega168_sfr.h  atmega168a_sfr.h  atmega168p_sfr.h  atmega168pa_sfr.h  atmega168pb_sfr.h  atmega169a_sfr.h  atmega169p_sfr.h  atmega169pa_sfr.h  (+77 more)
src/spi/: atmega32_spi.h
src/timer/: atmega32_timer.h
src/usart/: atmega32_usart.h
tests/: CMakeLists.txt  buffer.cpp  byte_order.cpp  byte_swap.cpp  cobs.cpp  core.cpp  encoders.cpp  thermistor.cpp  ubrr.cpp  vdiv.cpp
utils/: analyze.py  atdf_parser.py  baud.py  eeprom.j2  filters.py  generate_headers.py  gpio.j2  irq_def.j2  sfr.j2  timer.py  wzor.py
